Upcoming:
- Fixed some bad descriptions (effectId -> effect)

1.19-2.0.0:
- Fancy Trinkets!
