@@ -112,6 +112,7 @@
   "effectId.fancytrinkets.dmg_wither_debuff": "Wither Damage Weakness (+25%)",
   "effectId.fancytrinkets.fire_resistance": "Fire Resistance",
   "effectId.fancytrinkets.flight": "Flight",
+  "effectId.fancytrinkets.growtick": "Grow Tick Increase",
   "effectId.fancytrinkets.haste": "Haste",
   "effectId.fancytrinkets.health_boost": "Health Boost",
   "effectId.fancytrinkets.hunger": "Hunger",
@@ -217,6 +218,8 @@
   "trinket.fancytrinkets.fireresist_ring.name": "Ring of Coolness",
   "trinket.fancytrinkets.flight_star.description": "This star gives you the freedom of flight",
   "trinket.fancytrinkets.flight_star.name": "Sky Star",
+  "trinket.fancytrinkets.grow_charm.description": "Crops grow faster around you",
+  "trinket.fancytrinkets.grow_charm.name": "Charm of Growth",
   "trinket.fancytrinkets.lightness_ring.description": "Reduce 75% of fall damage",
   "trinket.fancytrinkets.lightness_ring.name": "Ring of Lightness",
   "trinket.fancytrinkets.nightvision_ring.description": "Using a hotkey you can see clearly in the dark",
