@@ -11,8 +11,8 @@ import net.minecraft.world.entity.ai.attributes.Attribute;
 import net.minecraft.world.entity.ai.attributes.Attributes;
 import net.minecraftforge.common.ForgeMod;
 import net.minecraftforge.registries.ForgeRegistries;
-import org.jetbrains.annotations.NotNull;
 
+import javax.annotation.Nonnull;
 import java.util.Optional;
 import java.util.function.Supplier;
 
@@ -50,7 +50,8 @@ public record EffectDescription(Integer hotkey, String toggle, boolean harmful, 
         FLIGHT(() -> FlightEffect.CODEC),
         WARP(() -> WarpEffect.CODEC),
         CURE(() -> CureEffect.CODEC),
-        ATTRIBUTE(() -> AttributeModifierEffect.CODEC)
+        ATTRIBUTE(() -> AttributeModifierEffect.CODEC),
+        GROWTICK(() -> GrowTickEffect.CODEC)
         ;
         private final Supplier<Codec<IEffectParameters>> codecSupplier;
 
@@ -72,10 +73,17 @@ public record EffectDescription(Integer hotkey, String toggle, boolean harmful, 
             case WARP -> new WarpEffect(hotkey, toggle, WarpEffect.Params.cast(params).maxdist());
             case CURE -> new CureEffect(hotkey, toggle);
             case ATTRIBUTE -> getAttributeEffect(params, hotkey, toggle);
+            case GROWTICK -> getGrowTickEffect(params, hotkey, toggle);
         };
     }
 
-    @NotNull
+    @Nonnull
+    private static GrowTickEffect getGrowTickEffect(IEffectParameters params, Integer hotkey, String toggle) {
+        GrowTickEffect.Params p = GrowTickEffect.Params.cast(params);
+        return new GrowTickEffect(hotkey, toggle, p.maxdist(), p.blocks());
+    }
+
+    @Nonnull
     private static AttributeModifierEffect getAttributeEffect(IEffectParameters params, Integer hotkey, String toggle) {
         AttributeModifierEffect.Params p = AttributeModifierEffect.Params.cast(params);
         String effName = p.effect();
@@ -95,7 +103,7 @@ public record EffectDescription(Integer hotkey, String toggle, boolean harmful, 
         return new AttributeModifierEffect(hotkey, toggle, effName, attributeSupplier, p.operation(), p.amount());
     }
 
-    @NotNull
+    @Nonnull
     private static MobEffectEffect getMobEffectEffect(IEffectParameters params, Integer hotkey, String toggle) {
         MobEffectEffect.Params p = MobEffectEffect.Params.cast(params);
         String effName = p.effect();
@@ -106,7 +114,7 @@ public record EffectDescription(Integer hotkey, String toggle, boolean harmful, 
         return new MobEffectEffect(hotkey, toggle, effect, p.strength() - 1);
     }
 
-    @NotNull
+    @Nonnull
     private static PotionResistanceEffect getPotionResistanceEffect(IEffectParameters params, Integer hotkey, String toggle) {
         PotionResistanceEffect.Params p = PotionResistanceEffect.Params.cast(params);
         String effName = p.effect();
@@ -117,7 +125,7 @@ public record EffectDescription(Integer hotkey, String toggle, boolean harmful, 
         return new PotionResistanceEffect(hotkey, toggle, effect);
     }
 
-    @NotNull
+    @Nonnull
     private static DamageReductionEffect getDamageReductionEffect(IEffectParameters params, Integer hotkey, String toggle) {
         DamageReductionEffect.Params p = DamageReductionEffect.Params.cast(params);
         String dmgId = p.dmgId();
